# SOFA

./: .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  plots.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sofa.html  spFA.py  spfa.html  tcga_data.ipynb  utils.html
.github/workflows/: main.yml  publish.yaml
_sources/: index.rst.txt  plots.rst.txt  utils.rst.txt
_sources/notebooks/: cll_data.ipynb.txt  depmap_example.ipynb.txt  pbmc5k.ipynb.txt  sc_multiome_example.ipynb.txt  tcga_data.ipynb.txt  tcga_gyn_analysis.ipynb.txt
docs/: conf.py  index.rst  requirements.txt  spfa.rst  utils.rst
docs/notebooks/: cll_data.ipynb  depmap_example.ipynb  sc_multiome_example.ipynb  tcga_data.ipynb
examples/: tcga_data.ipynb
notebooks/: cll_data.html  depmap_example.html  depmap_example.ipynb  installation.html  installation.ipynb  pbmc5k.html  pbmc5k.ipynb  sc_multiome_example.html  tcga_data.html  tcga_data.ipynb  tcga_gyn_analysis.html
pbmc5k/: pbmc5k_obs.csv
sofa/: __init__.py
sofa/models/: SOFA.py  train_utils.py
sofa/plots/: __init__.py  plots.py
sofa/utils/: __init__.py  utils.py
spFA/: plots.py  spFA.py  utils.py
spFA/.ipynb_checkpoints/: plots-checkpoint.py  spFA-checkpoint.py
spFA/models/: spFA.py
spFA/plots/: plots.py
spFA/utils/: utils.py
spfa/: __init__.py
spfa/models/: spFA.py
spfa/plots/: __init__.py  plots.py
spfa/utils/: __init__.py  (+1 more)
tcga_data/: .~lock.gdc_sample_sheet.2023-04-18.tsv#  train_prot.csv  train_y.csv
tests/: conftest.py  test_plots.py  test_sofa.py  test_utils.py
(+11 files in other folders)
